@startuml

title __HELPERS's Class Diagram__\n

  package com.avansprojects.antl {
    package com.avansprojects.antl.helpers {
      class Authentication {
          {static} + logout()
          {static} + verify()
          {static} + login()
          {static} - createApplicationUser()
      }
    }
  }
  

  package com.avansprojects.antl {
    package com.avansprojects.antl.helpers {
      class BottomOffsetDecoration {
          - mBottomOffset : int
          - mRecyclerViewSize : int
          + BottomOffsetDecoration()
          + getItemOffsets()
      }
    }
  }
  

  package com.avansprojects.antl {
    package com.avansprojects.antl.helpers {
      class CalendarHelper {
          {static} + getCurrentSeconds()
          {static} + getCurrentMinutes()
          {static} + getCurrentHours()
          {static} + getCurrentDay()
          {static} + getCurrentMonth()
          {static} + getCurrentYear()
          {static} + joinDateTime()
          {static} + DateTimeToString()
          {static} + getNumericMinutesFromDate()
          {static} + getNumericHoursFromDate()
          {static} + getNumericYearFromDate()
          {static} + getNumericDayFromDate()
          {static} + getNumericMonthFromDate()
          {static} + getDayFromDate()
          {static} + getCurrentMonthAbbreviationFromDate()
          {static} + setDate()
          {static} + setTime()
      }
    }
  }
  

  package com.avansprojects.antl {
    package com.avansprojects.antl.helpers {
      class DatePickerFactory {
          - mFragment : Fragment
          - mDate : Date
          - mTime : Date
          + DatePickerFactory()
          + getInstance()
          + getDateTime()
          + setTime()
      }
    }
  }
  

  package com.avansprojects.antl {
    package com.avansprojects.antl.helpers {
      class TimeDialog {
          + getInstance()
          + onTimeSet()
      }
    }
  }
  

  package com.avansprojects.antl {
    package com.avansprojects.antl.helpers {
      class DateDialog {
          + getInstance()
          + onDateSet()
      }
    }
  }
  

  package com.avansprojects.antl {
    package com.avansprojects.antl.helpers {
      class MyAppGlideModule {
      }
    }
  }
  

  package com.avansprojects.antl {
    package com.avansprojects.antl.helpers {
      class NonSwipeableViewPager {
          + NonSwipeableViewPager()
          + NonSwipeableViewPager()
          + onInterceptTouchEvent()
          + onTouchEvent()
          - setMyScroller()
      }
    }
  }
  

  package com.avansprojects.antl {
    package com.avansprojects.antl.helpers {
      class MyScroller {
          + MyScroller()
          + startScroll()
      }
    }
  }
  

  BottomOffsetDecoration -up-|> ItemDecoration
  DatePickerFactory o-- DatePickerListener : mListener
  DatePickerFactory +-down- TimeDialog
  DatePickerFactory +-down- DateDialog
  TimeDialog -up-|> OnTimeSetListener
  DateDialog -up-|> OnDateSetListener
  MyAppGlideModule -up-|> AppGlideModule
  NonSwipeableViewPager -up-|> ViewPager
  NonSwipeableViewPager +-down- MyScroller
  MyScroller -up-|> Scroller
  ViewPositionComparator -up-|> Comparator
  LayoutParams -up-|> LayoutParams
  PagerObserver -up-|> DataSetObserver
  MyAccessibilityDelegate -up-|> AccessibilityDelegateCompat
  AccessibilityDelegateAdapter -up-|> AccessibilityDelegate
  SavedState -up-|> AbsSavedState
  SimpleOnPageChangeListener -up-|> OnPageChangeListener
  MarginLayoutParams -up-|> LayoutParams
  BaseSavedState -up-|> AbsSavedState


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
